tests/invalid_nodepend/unicode_2.err_exp
unicode_2.m:005: Warning: the interface of module `unicode_2' does not export
unicode_2.m:005:   anything.
unicode_2.m:009: Syntax error at token 'int': operator or `.' expected.
unicode_2.m:009: Syntax error: invalid Unicode character code.
For more information, recompile with `-E'.
